<resources xmlns:tools="http://schemas.android.com/tools">
    <!-- App 名称 -->
    <string name="app_name">WiseFido BLE</string>
    <!-- 设备类型 -->
    <string name="device_type_radar">Radar</string>
    <string name="device_type_sleep">SleepBoard</string>
    <string name="filter_deviceName">Filter DeviceName </string>
    <string name="format_rssi">RSSI: %d</string>

    <!-- 提示文字 -->
    <string name="hint_keep_close">Please keep your phone close to the device</string>
    <string name="title_scan_device">Scan Device</string>

    <!-- MainActivity 相关文本 -->
    <string name="title_ble_wifi">BLE to Wi-Fi Configuration</string>
    <string name="step_1">Device</string>
    <string name="hint_select_device">Select device ID</string>
    <string name="step_2">Config</string>
    <string name="hint_server_info">Server information to be connected by the device</string>
    <string name="hint_server_address">example: 47.90.180.176 or ipv4.owl.wisefido.com</string>
    <string name="hint_server_port">tcp29010</string>
    <string name="step_3">STEP 3</string>
    <string name="hint_select_wlan">Select WLAN to connect device</string>
    <string name="hint_wifi_name">Wi-Fi Name</string>
    <string name="hint_wifi_password">Password</string>
    <string name="btn_pair">Pair</string>
    <string name="btn_status">Status</string>
    <string name="unknown_device">unkown device</string>
    <string name="unknown_device_id">unknown device id</string>

   <!-- 历史记录相关 -->
    <string name="recent_servers">Recent Servers</string>
    <string name="recent_networks">Recent Networks</string>
    <string name="no_recent_servers">No recent servers</string>
    <string name="no_recent_networks">No recent networks</string>
    
    <!-- Toast 提示 -->
    <string name="toast_select_device_first">Please select a device first</string>
    <string name="toast_unknown_device_type">Unknown device type</string>
    <string name="toast_enter_server_address">Please enter server address</string>
    <string name="toast_enter_server_port">Please enter server port</string>
    <string name="toast_enter_wifi_name">Please enter Wi-Fi ssid</string>
    <string name="toast_enter_wifi_password">Please enter Wi-Fi password</string>
    <string name="toast_config_success">Configuration successful</string>
    <string name="toast_config_failed">Configuration failed</string>
    <string name="toast_invalid_port_format">Invalid port format. UseType "tcp29010" or "29010"</string>
    <string name="cannot_find_device_click_to_refresh">Cannot find device? Click to refresh</string>
    <string name="toast_get_wifi_failed">Failed to get WiFi information</string>
    <string name="toast_invalid_device">invalid_device</string>
    <string name="toast_config_exception">toast_config_exception</string>
    <string name="recent_networks_count">Recent Networks (%1$d)</string>
    <string name="recent_servers_count">Recent Servers (%1$d)</string>
    <string name="permissions_required">Bluetooth and Location permission required</string>
    <string name="toast_config_required">To configure Wi-Fi or Server, at least one is required: </string>
    <string name="status_text_with_connection">%1$s\nDevice con successfully</string>nected
    <string name="status_text_with_device_connected">%1$s\nDevice connected successfully</string>
    <string name="status_text_with_wifi_success">%1$s\nWiFi configuration successful</string>
    <string name="status_text_with_wifi_failed">%1$s\nWiFi configuration failed</string>
    <string name="status_text_with_server_success">%1$s\nServer configuration successful!</string>
    <string name="status_text_with_server_failed">%1$s\nServer configuration failed!</string>

    <!-- ScanActivity 相关文本 -->
    <string name="back">Back</string>
    <string name="search_device">Search Device</string>
    <string name="scan">SCAN</string>
    <string name="stop">STOP</string>
    <string name="radar_device_name">Radar Device Name</string>
    <string name="filter_type">Filter Type</string>
    <string name="filter_device_name">Device Name</string>
    <string name="filter_mac">MAC Address</string>
    <string name="filter_uuid">UUID</string>
    <string name="bluetooth_not_supported">Device does not support Bluetooth</string>
    <string name="bluetooth_permission_required">Bluetooth permission required</string>
    <string name="location_permission_required">Location permission required</string>
    <string name="config">Configuration</string>
    <string name="connecting">Connecting</string>

</resources>